<resources>
    <string name="app_name">CARNAVA</string>

    <string name="ruble_postfix">%s ₽</string>

    <string name="error_fill_in_the_required_field">Заполните обязательное поле</string>
    <string name="error_email_is_not_correct">Почта не корректная</string>

    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_create_account">Создать учетную запись</string>

    <string name="sign_up_what_is_your_name">Как к вам обращаться?</string>
    <string name="sign_up_name">Имя:</string>
    <string name="sign_up_registry">Зарегистрироваться</string>

    <string name="profile_rate_this_app">Оценить это приложение</string>
    <string name="profile_share_app">Рекомендовать это приложение</string>
    <string name="profile_logout">Выйти с аккаунта</string>

    <string name="item_product_add_to_cart">Добавить в корзину</string>

    <string name="search_hint">Поиск</string>
    <string name="cart_place_an_order">Оформить заказ</string>
    <string name="cart_remove">Убрать</string>
    <string name="create_order_input_data">Введите данные:</string>
    <string name="create_order_address_hint">Адрес: (город,улица проживания,почтовый индекс)</string>
    <string name="create_order_phone_hint">Номер телефона</string>
    <string name="create_order_place_order">Оформить</string>
    <string name="create_order_place_order_success">Заказ успешно оформлен</string>

</resources>