<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_container_create_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_create_order_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/create_order_input_data"
        android:textColor="@color/text_black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/address_create_order_input"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_style_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_create_order_text" />

    <TextView
        android:id="@+id/title_address_create_order_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="4dp"
        android:gravity="start"
        android:text="@string/create_order_address_hint"
        android:textColor="@color/text_black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/address_create_order_input"
        app:layout_constraintStart_toStartOf="@id/address_create_order_input"
        app:layout_constraintTop_toTopOf="@id/address_create_order_input" />

    <EditText
        android:id="@+id/phone_create_order_input"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_style_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_create_order_input" />


    <TextView
        android:id="@+id/phone_hint_create_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="4dp"
        android:text="@string/create_order_phone_hint"
        android:textColor="@color/text_black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/phone_create_order_input"
        app:layout_constraintTop_toTopOf="@+id/phone_create_order_input" />


    <Button
        android:id="@+id/place_order_create_order_button"
        style="@style/Widget.App.ButtonAccent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/create_order_place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>